# stocks-trading-api

./: .env.example  .gitignore  AGENTS-v1.md  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.yaml  deploy.sh  destroy.sh  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 20260716_0001_phase1_schema.py  20260716_0002_indicator_agent.py  20260716_0003_rule_engine.py  20260716_0004_strategy_engine.py  20260716_0005_scoring_agent.py  20260716_0006_ranking_agent.py  20260716_0007_analysis_agent.py  20260716_0008_alert_agent.py  20260716_0009_backtesting_agent.py  20260717_0010_strategy_optimizer.py  20260717_0011_market_cache.py  20260718_0012_research_jobs.py  20260718_0013_risk_management.py  20260718_0014_swing_strategy.py  20260718_0015_position_lifecycle.py  20260718_0016_portfolio_management.py  20260719_0017_historical_backfill.py  20260719_0018_fundamental_agent.py  20260719_0019_combined_sync_runs.py
config/: rules-swing-v1.yaml  rules-v1.yaml
config/alerts/: technical-v1.yaml
config/analysis/: technical-v1.yaml
config/backtesting/: bsjp-v1.yaml  swing-trend-following-v1.yaml
config/fundamentals/: fundamental-v1.yaml
config/liquidity/: tiers-v1.yaml
config/market-calendar/: idx-v2.yaml
config/optimization/: bsjp-v1.yaml  swing-trend-following-v1.yaml
config/positions/: swing-lifecycle-v1.yaml
config/ranking/: technical-v1.yaml
config/risk/: technical-v1.yaml
config/scoring/: swing-trend-following-v1.yaml  technical-v1.yaml
docs/: cron.example
scripts/: build_universe_snapshot.py  scheduler.py
(+120 files in other folders)
