[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stocks-trading"
version = "0.1.0"
description = "IDX universe and Yahoo Finance daily market data foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.116,<1",
  "pandas>=2.2,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "pyyaml>=6,<7",
  "sqlalchemy>=2.0,<3",
  "typer>=0.15,<1",
  "uvicorn[standard]>=0.35,<1",
  "yfinance>=0.2.54,<1",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "testcontainers[postgres]>=4.9,<5",
]

[project.scripts]
stocks = "stocks_trading.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/stocks_trading"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: requires Docker and PostgreSQL",
  "legacy_bsjp: verifies the disabled BSJP implementation remains recoverable",
]
